--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SimpleCalculator</string>
+    <string name="client_id">505398631555-5emrh9gp9qcekvdeksoc67m2rivlhv1u.apps.googleusercontent.com</string>
 </resources>
